--- a/gallerysite/Views/Home/Index.cshtml
+++ b/gallerysite/Views/Home/Index.cshtml
@@ -5,6 +5,6 @@
 <h2>=^..^=</h2>
 <h3>Migration Status</h3>
 <form>
-    <button type="submit" id="migrationStatus"/>
+    <p id="migrationStatusDisplay">&nbsp;</p>
+    <button type="submit" id="migrationStatusButton">Get Status</button>
 </form>
-
