extract after-scripts

--- a/gallerysite/Views/Home/Index.cshtml
+++ b/gallerysite/Views/Home/Index.cshtml
@@ -8,3 +8,7 @@
     <p id="migrationStatusDisplay">&nbsp;</p>
     <button type="submit" id="migrationStatusButton">Get Status</button>
 </form>
+
+@section AfterScripts {
+    <script src="~/Scripts/gallerytools.js"></script>
+}
