--- a/gallerysite/Views/Shared/_Layout.cshtml
+++ b/gallerysite/Views/Shared/_Layout.cshtml
@@ -36,6 +36,6 @@
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts/gallerytools.js"></script>
+    @RenderSection("AfterScripts", required: false)
 </body>
 </html>
