--- a/gallerysite/Views/Shared/_Layout.cshtml
+++ b/gallerysite/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/knockout-3.3.0.js"></script>
     @RenderSection("AfterScripts", required: false)
 </body>
 </html>
