--- a/gallerysite/Views/Home/Index.cshtml
+++ b/gallerysite/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <p>Migrations status <span data-bind="text: migrationStatus().SubjectsInDatabase"></span> subject(s) in database, 
     <span data-bind="text: migrationStatus().SubjectsInFileSystem"></span> in file system.</p>
-<div class="btn btn-default" data-bind:"click: updateMigrationStatus">Get Status</div>
+<div class="btn btn-info" data-bind:"click: updateMigrationStatus">Get Status</div>
 
 @section AfterScripts {
     <script src="~/Scripts/gallerytools.js"></script>
