--- a/gallerysite/Views/Home/Index.cshtml
+++ b/gallerysite/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
     <span data-bind="text: migrationStatus().SubjectsInFileSystem"></span> in file system.</p>
 <p data-bind="text: systemProgress()"></p>
 <div class="btn btn-info" data-bind="click: updateMigrationStatus">Get Status</div>
+<div class="btn btn-info" data-bind="click: runMigration">Run Migration</div>
 
 @section AfterScripts {
     <script src="~/Scripts/gallerytools.js"></script>
